--- a/Dockerfile.dist
+++ b/Dockerfile.dist
@@ -4,6 +4,7 @@ RUN apk update \
     && apk add ca-certificates git \
     && rm -rf /var/cache/apk/*
 
+RUN go env -w GO111MODULE=off
 RUN go get github.com/gin-gonic/gin
 RUN go get github.com/stretchr/testify/assert
 RUN go get github.com/go-redis/redis
